# calendar-qt

./: CMakeLists.txt  Main.qml  NavigatorButton.qml  README.md  Theme.qml  main.cpp
